fixed twitch pane alignment

--- a/staticFiles/style.css
+++ b/staticFiles/style.css
@@ -1,8 +1,8 @@
 #twitchLivePane {
     display: flex;
     width: 10%;
-    justify-content: flex-end;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 #leftPane {
@@ -20,6 +20,7 @@
 .twitchChannelBox {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .horizontalList {
@@ -28,6 +29,11 @@
 }
 
 .twitchIcon {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
+}
+
+.imageLink {
+    width: fit-content;
+    height: fit-content;
 }
